--- a/web/bower.json
+++ b/web/bower.json
@@ -1,14 +1,14 @@
 {
-  "name": "friendlypix",
-  "description": "Share your pics with FriendlyPix. Powered by Firebase.",
+  "name": "fidelium",
+  "description": "Guarde seus carimbos de fidelidade. Powered by Firebase.",
   "version": "1.0.0",
   "authors": [
-    "Nicolas Garnier <nivco@google.com> (https://firebase.google.com/)"
+    "John Theo <john.theo.souza@gmail.com>(http://johntheo.com.br)"
   ],
-  "homepage": "https://friendly-pix.com/",
+  "homepage": "https://fidelium-app.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/firebase/friendlypix"
+    "url": "https://github.com/johntheo/fidelium-app"
   },
   "license": "Apache v2.0",
   "keywords": [
