--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,25 +1,48 @@
 {
-  "name": "Friendly Pix",
-  "short_name": "FriendlyPix",
-  "icons": [{
-    "src": "/images/touch/touch-icon-128x128.png",
-    "sizes": "128x128",
-    "type": "image/png"
-  }, {
-    "src": "/images/touch/touch-icon-180x180.png",
-    "sizes": "180x180",
-    "type": "image/png"
-  }, {
-    "src": "/images/touch/touch-icon-144x144.png",
-    "sizes": "144x144",
-    "type": "image/png"
-  }, {
-    "src": "/images/touch/touch-icon-192x192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }],
+  "name": "Fidelium",
+  "short_name": "Fidelium",
+  "icons": [
+    {
+     "src": "images/icons/android-icon-36x36.png",
+     "sizes": "36x36",
+     "type": "image/images/icons/png",
+     "density": "0.75"
+    },
+    {
+     "src": "images/icons/android-icon-48x48.png",
+     "sizes": "48x48",
+     "type": "image/images/icons/png",
+     "density": "1.0"
+    },
+    {
+     "src": "images/icons/android-icon-72x72.png",
+     "sizes": "72x72",
+     "type": "image/images/icons/png",
+     "density": "1.5"
+    },
+    {
+     "src": "images/icons/android-icon-96x96.png",
+     "sizes": "96x96",
+     "type": "image/images/icons/png",
+     "density": "2.0"
+    },
+    {
+     "src": "images/icons/android-icon-144x144.png",
+     "sizes": "144x144",
+     "type": "image/images/icons/png",
+     "density": "3.0"
+    },
+    {
+     "src": "images/icons/android-icon-192x192.png",
+     "sizes": "192x192",
+     "type": "image/images/icons/png",
+     "density": "4.0"
+    }
+  ],
   "start_url": "/index.html",
+  "theme_color": "#AF044F",
+  "background_color": "#AF044F",
   "display": "standalone",
   "orientation": "portrait",
-  "gcm_sender_id": "103953800507"
+  "gcm_sender_id": "877514274517"
 }
